--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -13,33 +13,27 @@ body {
 .title {
   background: #e3f4ff;
   font-size: 16px;
-  padding: 10px;
-  margin: 8px;
+  padding: 8px;
+  margin-top: 0;
+  margin-bottom: 8px;
 }
 
 .content {
   background: #e3f4ff;
   text-align: center;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-left: 8px;
-  padding-right: 8px;
-  margin: 8px;
+  padding: 16px 8px;
+  margin-bottom: 8px;
 }
 
 .button-container {
   background: #e3f4ff;
   text-align: center;
-  padding: 8px;
-  margin: 8px;
+  padding: 16px 8px;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-top: 8px;
-  padding-bottom: 8px;
-  margin: 8px;
+  padding: 8px 24px;
+  margin: 0 auto;
 }
