--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -5,7 +5,6 @@ p {
 
 .anotherID {
     background-color: rgb(134, 238, 124);
-    font-size: 24px;
     font-weight: bold;
 }
 
@@ -14,7 +13,7 @@ p {
     font-size: 36px;
 }
 
-.number3 {
+.fontsize {
     font-size: 24px;
 }
 
