--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -1,39 +1,38 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  margin: 10px;
 }
 
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
-  padding: 8px;
+  padding: 5px;
 }
 
 .title {
   background: #e3f4ff;
-  font-size: 16px;
-  padding: 8px;
-  margin-top: 0;
-  margin-bottom: 8px;
+  padding-left: 10px;
 }
 
 .content {
   background: #e3f4ff;
   text-align: center;
-  padding: 16px 8px;
-  margin-bottom: 8px;
+  padding: 10px;
 }
 
 .button-container {
   background: #e3f4ff;
   text-align: center;
-  padding: 16px 8px;
+  margin: 10px auto;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
-  padding: 8px 24px;
-  margin: 0 auto;
+  padding: 8px 20px;
+  width: 200px;
+  font-weight: bold;
+  margin: 10px;
 }
