--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -8,7 +8,7 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
-  padding: 5px;
+  padding: 10px;
 }
 
 .title {
@@ -25,7 +25,10 @@ body {
 .button-container {
   background: #e3f4ff;
   text-align: center;
-  margin: 10px auto;
+}
+
+p {
+  margin-bottom: 10px;
 }
 
 button {
@@ -34,5 +37,6 @@ button {
   padding: 8px 20px;
   width: 200px;
   font-weight: bold;
-  margin: 10px;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
