--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,14 @@
+
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
+  margin: 30px;
+
+  border: 10px solid red;
 }
 
 .logo {
@@ -9,11 +17,18 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  border: solid red;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  padding: 0px;
+
+
+  gap: 8px;
+  border: solid red;
 }
 
 a {
