--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -8,10 +8,18 @@ body {
   font-family: Besley, serif;
 }
 
+.wholehead {
+  display: flex;
+  flex-direction: column;
+}
+
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -45,4 +53,20 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+}
+
+.left, .right {
+  margin: 10px;
+  display: flex;
+}
+
+.notifications {
+  margin-right: 30px;
+}
+
+.bluebottom {
+  height: 80px;
+  background: rgb(155, 202, 228);
 }
