--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -2,6 +2,16 @@ body {
   font-family: 'Courier New', Courier, monospace;
 }
 
+.container {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.container div {
+  width: 200px;
+  text-align: center;
+}
+
 img {
   width: 100px;
   height: 100px;
@@ -10,6 +20,9 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin: 10px;
+
 }
 
 /* do not edit this footer */
