--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -13,13 +13,28 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
 }
+
 
 .modal {
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+
+}
+
+.top{
+  display: flex;
+  justify-content: space-between;
+}
+
+.header {
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .icon {
@@ -33,6 +48,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 10px;
 }
 
 .close-button {
@@ -46,11 +62,13 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 10px;
 }
 
 button {
   padding: 8px 16px;
   border-radius: 8px;
+  margin-bottom: 10px;
 }
 
 button.continue {
@@ -63,4 +81,8 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.text {
+  margin-bottom: 10px;
 }
